--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/mgerlach/advent_of_code/blob/main/2024/aoc2024.ipynb",
-      "authorship_tag": "ABX9TyMqE5lvBksZO6s3PgMd407i",
+      "authorship_tag": "ABX9TyPUZciZTmd+glxFH/2XiVGB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,6 +42,9 @@
         "def vec_add(v1, v2):\n",
         "  return tuple(sum(i) for i in zip(v1, v2))\n",
         "\n",
+        "def vec_sub(v1, v2):\n",
+        "  return tuple(i[0] - i[1] for i in zip(v1, v2))\n",
+        "\n",
         "dirs45 = [(dy, dx) for dy in [-1, 0, 1] for dx in [-1, 0, 1] if dy != 0 or dx != 0]\n",
         "\n",
         "dir_up = (-1, 0)\n",
@@ -65,7 +68,7 @@
       "metadata": {
         "id": "6gZpKr0ZzFrO"
       },
-      "execution_count": 34,
+      "execution_count": 112,
       "outputs": []
     },
     {
@@ -810,6 +813,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# [(desired_result, [operand1, operand2, ...])]\n",
         "input07 = [\n",
         "    (int(result.strip()), [int(operand.strip()) for operand in operands.split()])\n",
         "    for (result, operands) in [[s.strip() for s in line.split(':')] for line in open('drive/MyDrive/AoC/2024/input07.txt')]]"
@@ -884,6 +888,7 @@
         "  return check_equation2(desired_result, current_result + remaining_operands[0], remaining_operands[1:]) or \\\n",
         "         check_equation2(desired_result, current_result * remaining_operands[0], remaining_operands[1:]) or \\\n",
         "         check_equation2(desired_result, current_result * 10 ** (int(log10(remaining_operands[0])) + 1) + remaining_operands[0], remaining_operands[1:])\n",
+        "         # or with strings: check_equation2(desired_result, int(f'{current_result}{remaining_operands[0]}'), remaining_operands[1:])\n",
         "\n",
         "sum(desired_result for (desired_result, operands) in input07 if check_equation2(desired_result, operands[0], operands[1:]))"
       ],
@@ -892,9 +897,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HLi48dqUtOr5",
-        "outputId": "72c87cc8-ade8-4642-8cf2-ac8990acbb92"
+        "outputId": "affc09bb-3b97-4add-9014-3ba1c1670ae2"
       },
-      "execution_count": 81,
+      "execution_count": 83,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -904,7 +909,121 @@
             ]
           },
           "metadata": {},
-          "execution_count": 81
+          "execution_count": 83
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Day 08, input"
+      ],
+      "metadata": {
+        "id": "_npwXTDQzmJS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# get width, height\n",
+        "input08 = [line.strip() for line in open('drive/MyDrive/AoC/2024/input08.txt')]\n",
+        "height = len(input08)\n",
+        "width = len(input08[0])\n",
+        "dimensions = (height, width)\n",
+        "antennas = {}\n",
+        "for (name, pos) in [(input08[y][x], (y, x)) for y in range(height) for x in range(width) if input08[y][x] != '.']:\n",
+        "  if name in antennas:\n",
+        "    antennas[name].append(pos)\n",
+        "  else:\n",
+        "    antennas[name] = [pos]\n"
+      ],
+      "metadata": {
+        "id": "u4F3xlexzshP"
+      },
+      "execution_count": 139,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Day 08, part 1, find antinodes (unique positions)"
+      ],
+      "metadata": {
+        "id": "pKq4640e5zb4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def antinodes(positions):\n",
+        "  return [p for p in [vec_sub(p1, vec_sub(p2, p1)) for p1 in positions for p2 in positions if p1 != p2] if in_range(p, dimensions)]\n",
+        "\n",
+        "len({p for a in antennas.values() for p in antinodes(a)})"
+      ],
+      "metadata": {
+        "id": "zbQL-Qxz31kl",
+        "outputId": "cb7a5683-c774-40ca-9015-25131b37158d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 140,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "354"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 140
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Day 08, part 2, find more antinodes (unique positions)\n"
+      ],
+      "metadata": {
+        "id": "U1C0YD4s9vb7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def antinodes2(positions):\n",
+        "  def antinodes_for_pair(p1, p2):\n",
+        "    anodes = []\n",
+        "    dir = vec_sub(p2, p1)  # step\n",
+        "    p = p2  # p1, p2 are antinodes themselves, but no need to add p1 as we also call this for the swapped pair\n",
+        "    while(in_range(p, dimensions)):\n",
+        "      anodes.append(p)\n",
+        "      p = vec_add(p, dir)\n",
+        "    return anodes\n",
+        "  return {a for p1 in positions for p2 in positions if p1 != p2 for a in antinodes_for_pair(p1, p2)}\n",
+        "\n",
+        "len({a for p in antennas.values() for a in antinodes2(p)})"
+      ],
+      "metadata": {
+        "id": "Z24X9r_K8ZNk",
+        "outputId": "11bf27bf-6a0f-4293-8b2d-eae539265c11",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 141,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1263"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 141
         }
       ]
     }
