--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/mgerlach/advent_of_code/blob/main/2024/aoc2024.ipynb",
-      "authorship_tag": "ABX9TyPUZciZTmd+glxFH/2XiVGB",
+      "authorship_tag": "ABX9TyPQ7hJIGdNinrBKouDftGam",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -719,7 +719,7 @@
         "  dir = dir_up\n",
         "  p = start\n",
         "  visited = {(p, dir)}\n",
-        "  while(in_range(p, dimensions)):\n",
+        "  while in_range(p, dimensions):\n",
         "    next = vec_add(p, dir)\n",
         "    if in_range(next, dimensions):\n",
         "      if get_cell(next, grid) == '#':\n",
@@ -961,11 +961,11 @@
         "len({p for a in antennas.values() for p in antinodes(a)})"
       ],
       "metadata": {
-        "id": "zbQL-Qxz31kl",
-        "outputId": "cb7a5683-c774-40ca-9015-25131b37158d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zbQL-Qxz31kl",
+        "outputId": "cb7a5683-c774-40ca-9015-25131b37158d"
       },
       "execution_count": 140,
       "outputs": [
@@ -998,7 +998,7 @@
         "    anodes = []\n",
         "    dir = vec_sub(p2, p1)  # step\n",
         "    p = p2  # p1, p2 are antinodes themselves, but no need to add p1 as we also call this for the swapped pair\n",
-        "    while(in_range(p, dimensions)):\n",
+        "    while in_range(p, dimensions):\n",
         "      anodes.append(p)\n",
         "      p = vec_add(p, dir)\n",
         "    return anodes\n",
@@ -1007,11 +1007,11 @@
         "len({a for p in antennas.values() for a in antinodes2(p)})"
       ],
       "metadata": {
-        "id": "Z24X9r_K8ZNk",
-        "outputId": "11bf27bf-6a0f-4293-8b2d-eae539265c11",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Z24X9r_K8ZNk",
+        "outputId": "11bf27bf-6a0f-4293-8b2d-eae539265c11"
       },
       "execution_count": 141,
       "outputs": [
@@ -1026,6 +1026,153 @@
           "execution_count": 141
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Day 09, input"
+      ],
+      "metadata": {
+        "id": "24VlGq86D4kn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "input09 = open('drive/MyDrive/AoC/2024/input09.txt').read().strip()\n",
+        "# input09 = '2333133121414131402'  # example\n",
+        "codes = [int(c) for c in input09 + '0']\n",
+        "drive = [block for i in range(0, len(codes)-1, 2) for block in [int(i/2)] * codes[i] + [-1] * codes[i+1]]"
+      ],
+      "metadata": {
+        "id": "zQHuKZYxD7Dx"
+      },
+      "execution_count": 243,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Day 09, part 1, fill free space with single blocks"
+      ],
+      "metadata": {
+        "id": "-2hePse4EPnB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "i = 0\n",
+        "j = len(drive) - 1\n",
+        "compacted = []\n",
+        "while j >= i:\n",
+        "  if drive[i] >= 0:\n",
+        "    compacted.append(drive[i])\n",
+        "  else:\n",
+        "    compacted.append(drive[j])\n",
+        "    j -= 1\n",
+        "    while drive[j] == -1:\n",
+        "      j -= 1\n",
+        "  i += 1\n",
+        "\n",
+        "sum(b * i for (b, i) in zip(compacted, range(len(compacted))))"
+      ],
+      "metadata": {
+        "id": "7nFewmeCEO-e",
+        "outputId": "07b60222-a4f5-424a-aeb4-e119a72a2555",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 240,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6384282079460"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 240
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Day 09, part 2, fill free space with whole files"
+      ],
+      "metadata": {
+        "id": "MODS0kwzLxzw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "compacted = [b for b in drive]\n",
+        "j = len(compacted) - 1\n",
+        "# print(compacted)\n",
+        "while j >= 0:\n",
+        "  while compacted[j] == -1:\n",
+        "    j -= 1\n",
+        "  # found number, determine size\n",
+        "  n = j\n",
+        "  while compacted[n] == compacted[j]:\n",
+        "    n -= 1\n",
+        "  num_size = j - n\n",
+        "  # look for gaps\n",
+        "  i = 0\n",
+        "  while (i < j):\n",
+        "    while compacted[i] != -1 and i < j:\n",
+        "      i += 1\n",
+        "    # found gap, determine size\n",
+        "    g = i\n",
+        "    while compacted[g] == -1:\n",
+        "      g += 1\n",
+        "    gap_size = g - i\n",
+        "    if (gap_size >= num_size):\n",
+        "      # move\n",
+        "      for k in range(num_size):\n",
+        "        compacted[i + k] = compacted[j - k]\n",
+        "        compacted[j - k] = -1\n",
+        "        # print(compacted)\n",
+        "      break\n",
+        "    i = g\n",
+        "\n",
+        "  j = n\n",
+        "\n",
+        "sum((b if b >= 0 else 0) * i for (b, i) in zip(compacted, range(len(compacted))))"
+      ],
+      "metadata": {
+        "id": "pTQwq6ojEFCM",
+        "outputId": "d2301542-8d29-4afd-d40b-8785fb14d8b9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 251,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6408966547049"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 251
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "qgc3jPB9NS2Y"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
