day 09, part 2 variant

--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/mgerlach/advent_of_code/blob/main/2024/aoc2024.ipynb",
-      "authorship_tag": "ABX9TyPQ7hJIGdNinrBKouDftGam",
+      "authorship_tag": "ABX9TyNRGoT8XXWeuYGCmh+ZH5fa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,12 +63,19 @@
         "\n",
         "def get_cell(p, grid):\n",
         "  y, x = p\n",
-        "  return grid[y][x]\n"
+        "  return grid[y][x]\n",
+        "\n",
+        "# use with itertools islice(limit), islice(start, limit, step), takewhile(predicate, iterate(...))\n",
+        "def iterate(start, func):\n",
+        "  current = start\n",
+        "  while True:\n",
+        "    yield current\n",
+        "    current = func(current)"
       ],
       "metadata": {
         "id": "6gZpKr0ZzFrO"
       },
-      "execution_count": 112,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -700,7 +707,7 @@
       "metadata": {
         "id": "14BPsXpkMxlv"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -742,7 +749,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -787,7 +794,7 @@
         "id": "vilThMk8kFpb",
         "outputId": "aaeddf86-b39b-418d-fd1e-352a2b22eec5"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -821,7 +828,7 @@
       "metadata": {
         "id": "EUSaUdGeQh0m"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -853,7 +860,7 @@
         "id": "2vrLLyYjpcLN",
         "outputId": "19a66d4c-f7b8-4aba-a321-50c6be4c7b48"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -899,7 +906,7 @@
         "id": "HLi48dqUtOr5",
         "outputId": "affc09bb-3b97-4add-9014-3ba1c1670ae2"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -940,7 +947,7 @@
       "metadata": {
         "id": "u4F3xlexzshP"
       },
-      "execution_count": 139,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -967,7 +974,7 @@
         "id": "zbQL-Qxz31kl",
         "outputId": "cb7a5683-c774-40ca-9015-25131b37158d"
       },
-      "execution_count": 140,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1013,7 +1020,7 @@
         "id": "Z24X9r_K8ZNk",
         "outputId": "11bf27bf-6a0f-4293-8b2d-eae539265c11"
       },
-      "execution_count": 141,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1041,13 +1048,12 @@
       "source": [
         "input09 = open('drive/MyDrive/AoC/2024/input09.txt').read().strip()\n",
         "# input09 = '2333133121414131402'  # example\n",
-        "codes = [int(c) for c in input09 + '0']\n",
-        "drive = [block for i in range(0, len(codes)-1, 2) for block in [int(i/2)] * codes[i] + [-1] * codes[i+1]]"
+        "codes = [int(c) for c in input09 + '0']"
       ],
       "metadata": {
         "id": "zQHuKZYxD7Dx"
       },
-      "execution_count": 243,
+      "execution_count": 83,
       "outputs": []
     },
     {
@@ -1062,6 +1068,7 @@
     {
       "cell_type": "code",
       "source": [
+        "drive = [block for i in range(0, len(codes)-1, 2) for block in [int(i/2)] * codes[i] + [-1] * codes[i+1]]\n",
         "i = 0\n",
         "j = len(drive) - 1\n",
         "compacted = []\n",
@@ -1079,12 +1086,12 @@
       ],
       "metadata": {
         "id": "7nFewmeCEO-e",
-        "outputId": "07b60222-a4f5-424a-aeb4-e119a72a2555",
+        "outputId": "f2b0bdeb-4cd3-421f-e65d-3e9d74024b23",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 240,
+      "execution_count": 84,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1094,7 +1101,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 240
+          "execution_count": 84
         }
       ]
     },
@@ -1110,6 +1117,8 @@
     {
       "cell_type": "code",
       "source": [
+        "# attempt 1, model every block (slow)\n",
+        "drive = [block for i in range(0, len(codes)-1, 2) for block in [int(i/2)] * codes[i] + [-1] * codes[i+1]]\n",
         "compacted = [b for b in drive]\n",
         "j = len(compacted) - 1\n",
         "# print(compacted)\n",
@@ -1146,22 +1155,23 @@
       ],
       "metadata": {
         "id": "pTQwq6ojEFCM",
-        "outputId": "d2301542-8d29-4afd-d40b-8785fb14d8b9",
+        "outputId": "e1db6978-477f-47bf-f753-70f1f10dacba",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         }
       },
-      "execution_count": 251,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "6408966547049"
+              "2858"
             ]
           },
           "metadata": {},
-          "execution_count": 251
+          "execution_count": 20
         }
       ]
     },
@@ -1169,7 +1179,89 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "qgc3jPB9NS2Y"
+        "id": "vplxJxmbOpEJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from itertools import takewhile\n",
+        "# attempt 2, model intervals\n",
+        "drive = [interval for i in range(0, len(codes)-1, 2) for interval in [(int(i/2), codes[i]), (-1, codes[i+1])] if interval[1] > 0]\n",
+        "# print(drive)\n",
+        "\n",
+        "def is_file(interval):\n",
+        "  return interval[0] >= 0\n",
+        "\n",
+        "def is_gap(interval):\n",
+        "  return interval[0] == -1\n",
+        "\n",
+        "def i_id(interval):\n",
+        "  return interval[0]\n",
+        "\n",
+        "def i_size(interval):\n",
+        "  return interval[1]\n",
+        "\n",
+        "def merge_gaps(drive):\n",
+        "  def merge_gaps_(merged, unmerged):\n",
+        "    if not unmerged:\n",
+        "      return merged\n",
+        "    files = [b for b in takewhile(is_file, unmerged)]\n",
+        "    if not files:\n",
+        "      gaps = [g for g in takewhile(is_gap, unmerged)]\n",
+        "      if not gaps or len(gaps) == len(unmerged):\n",
+        "        return merged\n",
+        "      else:\n",
+        "        gap_size = sum(gap_size for (_, gap_size) in gaps)\n",
+        "        return merge_gaps_(merged + ([] if gap_size == 0 else [(-1, gap_size)]), unmerged[len(gaps):])\n",
+        "    else:\n",
+        "      return merge_gaps_(merged + files, unmerged[len(files):])\n",
+        "  return merge_gaps_([], drive)\n",
+        "\n",
+        "def find_gap(drive, file_index):\n",
+        "  file_id, file_size = drive[file_index]\n",
+        "  for i in range(len(drive)):\n",
+        "    if is_gap(drive[i]) and i < file_index and i_size(drive[i]) >= file_size:\n",
+        "      return i\n",
+        "  return None\n",
+        "\n",
+        "def find_id(drive, id):\n",
+        "  for i in range(len(drive)-1, -1, -1):\n",
+        "    if is_file(drive[i]):\n",
+        "      file_id, _ = drive[i]\n",
+        "      if file_id == id:\n",
+        "        return i\n",
+        "\n",
+        "def move_file(drive, i, g):\n",
+        "  file_id, file_size = drive[i]\n",
+        "  gap_size = i_size(drive[g])\n",
+        "  d = drive[:g] + [(file_id, file_size)] + [(-1, gap_size - file_size)] + drive[g+1:i] + [(-1, i_size(drive[i]))] + drive[i+1:]\n",
+        "  return merge_gaps(d)\n",
+        "\n",
+        "max_file_id = i_id(drive[-1])\n",
+        "\n",
+        "for file_id in range(max_file_id, 0, -1):\n",
+        "  file_index = find_id(drive, file_id)\n",
+        "  gap_index = find_gap(drive, file_index)\n",
+        "  if gap_index is not None:\n",
+        "    drive = move_file(drive, file_index, gap_index)\n",
+        "    # print(drive)\n",
+        "\n",
+        "s = 0\n",
+        "i = 0\n",
+        "for interval in drive:\n",
+        "  if is_file(interval):\n",
+        "    if (i_id(interval) % 100 == 0):\n",
+        "      print(i_id(interval))\n",
+        "    s += sum(range(i, i + i_size(interval))) * i_id(interval)\n",
+        "  i += i_size(interval)\n",
+        "s\n"
+      ],
+      "metadata": {
+        "collapsed": true,
+        "id": "rKU1w90XOHB3"
       },
       "execution_count": null,
       "outputs": []
