--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/mgerlach/advent_of_code/blob/main/2024/aoc2024.ipynb",
-      "authorship_tag": "ABX9TyNRGoT8XXWeuYGCmh+ZH5fa",
+      "authorship_tag": "ABX9TyMNZ8y1vWBeY9LUJSELjq2Q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,7 +75,7 @@
       "metadata": {
         "id": "6gZpKr0ZzFrO"
       },
-      "execution_count": 14,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -1053,7 +1053,7 @@
       "metadata": {
         "id": "zQHuKZYxD7Dx"
       },
-      "execution_count": 83,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -1086,12 +1086,12 @@
       ],
       "metadata": {
         "id": "7nFewmeCEO-e",
-        "outputId": "f2b0bdeb-4cd3-421f-e65d-3e9d74024b23",
+        "outputId": "1aea6223-beb5-45db-f5e0-8d3da2d2ed0f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 84,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1101,7 +1101,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 84
+          "execution_count": 20
         }
       ]
     },
@@ -1117,7 +1117,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# attempt 1, model every block (slow)\n",
+        "### SLOW for full input!!! ###\n",
         "drive = [block for i in range(0, len(codes)-1, 2) for block in [int(i/2)] * codes[i] + [-1] * codes[i+1]]\n",
         "compacted = [b for b in drive]\n",
         "j = len(compacted) - 1\n",
@@ -1155,13 +1155,12 @@
       ],
       "metadata": {
         "id": "pTQwq6ojEFCM",
-        "outputId": "e1db6978-477f-47bf-f753-70f1f10dacba",
+        "outputId": "cbaa5536-1b82-4bd2-c4e4-fa03e9f1b0b4",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1171,100 +1170,9 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 12
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "vplxJxmbOpEJ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from itertools import takewhile\n",
-        "# attempt 2, model intervals\n",
-        "drive = [interval for i in range(0, len(codes)-1, 2) for interval in [(int(i/2), codes[i]), (-1, codes[i+1])] if interval[1] > 0]\n",
-        "# print(drive)\n",
-        "\n",
-        "def is_file(interval):\n",
-        "  return interval[0] >= 0\n",
-        "\n",
-        "def is_gap(interval):\n",
-        "  return interval[0] == -1\n",
-        "\n",
-        "def i_id(interval):\n",
-        "  return interval[0]\n",
-        "\n",
-        "def i_size(interval):\n",
-        "  return interval[1]\n",
-        "\n",
-        "def merge_gaps(drive):\n",
-        "  def merge_gaps_(merged, unmerged):\n",
-        "    if not unmerged:\n",
-        "      return merged\n",
-        "    files = [b for b in takewhile(is_file, unmerged)]\n",
-        "    if not files:\n",
-        "      gaps = [g for g in takewhile(is_gap, unmerged)]\n",
-        "      if not gaps or len(gaps) == len(unmerged):\n",
-        "        return merged\n",
-        "      else:\n",
-        "        gap_size = sum(gap_size for (_, gap_size) in gaps)\n",
-        "        return merge_gaps_(merged + ([] if gap_size == 0 else [(-1, gap_size)]), unmerged[len(gaps):])\n",
-        "    else:\n",
-        "      return merge_gaps_(merged + files, unmerged[len(files):])\n",
-        "  return merge_gaps_([], drive)\n",
-        "\n",
-        "def find_gap(drive, file_index):\n",
-        "  file_id, file_size = drive[file_index]\n",
-        "  for i in range(len(drive)):\n",
-        "    if is_gap(drive[i]) and i < file_index and i_size(drive[i]) >= file_size:\n",
-        "      return i\n",
-        "  return None\n",
-        "\n",
-        "def find_id(drive, id):\n",
-        "  for i in range(len(drive)-1, -1, -1):\n",
-        "    if is_file(drive[i]):\n",
-        "      file_id, _ = drive[i]\n",
-        "      if file_id == id:\n",
-        "        return i\n",
-        "\n",
-        "def move_file(drive, i, g):\n",
-        "  file_id, file_size = drive[i]\n",
-        "  gap_size = i_size(drive[g])\n",
-        "  d = drive[:g] + [(file_id, file_size)] + [(-1, gap_size - file_size)] + drive[g+1:i] + [(-1, i_size(drive[i]))] + drive[i+1:]\n",
-        "  return merge_gaps(d)\n",
-        "\n",
-        "max_file_id = i_id(drive[-1])\n",
-        "\n",
-        "for file_id in range(max_file_id, 0, -1):\n",
-        "  file_index = find_id(drive, file_id)\n",
-        "  gap_index = find_gap(drive, file_index)\n",
-        "  if gap_index is not None:\n",
-        "    drive = move_file(drive, file_index, gap_index)\n",
-        "    # print(drive)\n",
-        "\n",
-        "s = 0\n",
-        "i = 0\n",
-        "for interval in drive:\n",
-        "  if is_file(interval):\n",
-        "    if (i_id(interval) % 100 == 0):\n",
-        "      print(i_id(interval))\n",
-        "    s += sum(range(i, i + i_size(interval))) * i_id(interval)\n",
-        "  i += i_size(interval)\n",
-        "s\n"
-      ],
-      "metadata": {
-        "collapsed": true,
-        "id": "rKU1w90XOHB3"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
