--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/mgerlach/advent_of_code/blob/main/2024/aoc2024.ipynb",
-      "authorship_tag": "ABX9TyMNZ8y1vWBeY9LUJSELjq2Q",
+      "authorship_tag": "ABX9TyOEKcD2XowDMIqJ6Nfkm+pA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -932,7 +932,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# get width, height\n",
         "input08 = [line.strip() for line in open('drive/MyDrive/AoC/2024/input08.txt')]\n",
         "height = len(input08)\n",
         "width = len(input08[0])\n",
@@ -1053,7 +1052,7 @@
       "metadata": {
         "id": "zQHuKZYxD7Dx"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1091,7 +1090,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1160,7 +1159,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1173,6 +1172,175 @@
           "execution_count": 12
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Day 10, input\n"
+      ],
+      "metadata": {
+        "id": "uHIZroNiDM0-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "input10 = [[int(c) if c.isdigit() else -1 for c in line.strip()] for line in open('drive/MyDrive/AoC/2024/input10.txt')]\n",
+        "height = len(input10)\n",
+        "width = len(input10[0])\n",
+        "dimensions = (height, width)\n",
+        "trailheads = [(y, x) for y in range(height) for x in range(width) if get_cell((y, x), input10) == 0]"
+      ],
+      "metadata": {
+        "id": "ulrsBZq2DX2-"
+      },
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Day 10, depth first search for peaks (9)"
+      ],
+      "metadata": {
+        "id": "tEW2W5QcZQTI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from functools import reduce\n",
+        "def find_peaks(p, visited, peaks):\n",
+        "  if not in_range(p, dimensions) \\\n",
+        "    or get_cell(p, input10) == -1 \\\n",
+        "    or p in visited \\\n",
+        "    or visited and get_cell(p, input10) != get_cell(visited[-1], input10) + 1:\n",
+        "    return peaks\n",
+        "  if get_cell(p, input10) == 9:\n",
+        "    # print(visited + [p])\n",
+        "    return peaks + [p]\n",
+        "  return reduce(lambda ps, d: find_peaks(vec_add(p, d), visited + [p], ps), dirs90, peaks)\n"
+      ],
+      "metadata": {
+        "id": "JilzmHArDj79"
+      },
+      "execution_count": 29,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Day 10, part 1, sum number of peaks reachable per trailhead"
+      ],
+      "metadata": {
+        "id": "5Mng-6-fZYxI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sum(len({peak for peak in find_peaks(p, [], [])}) for p in trailheads)"
+      ],
+      "metadata": {
+        "id": "lBaCaS6DZdpi",
+        "outputId": "124104f9-b45b-48e8-dbf0-5f653bea29d5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "36"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Day 10, part 2, sum number of distinct trails to peaks per trailhead"
+      ],
+      "metadata": {
+        "id": "Evymr9cYZguI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sum(len(find_peaks(p, [], [])) for p in trailheads)"
+      ],
+      "metadata": {
+        "id": "aVweMTquZsTf",
+        "outputId": "f4a07257-9311-4b49-8337-1f1e477410b0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1942"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Day 11, input"
+      ],
+      "metadata": {
+        "id": "cfB3m3zYbAla"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# input11 = [s.strip() for line in open('drive/MyDrive/AoC/2024/input11.txt') for s in line.split()]\n",
+        "input11 = [s.strip() for s in \"125 17\".split()]"
+      ],
+      "metadata": {
+        "id": "QJQB5jz7bASf",
+        "outputId": "91cf6270-bb87-4ec9-cb60-4e3afe2f5d66",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['125', '17']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "bdQZ3-WYcCKZ"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
