--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/mgerlach/advent_of_code/blob/main/2024/aoc2024.ipynb",
-      "authorship_tag": "ABX9TyOEKcD2XowDMIqJ6Nfkm+pA",
+      "authorship_tag": "ABX9TyObM8gqxYrW5MKdZrsdh3Dv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1242,23 +1242,23 @@
         "sum(len({peak for peak in find_peaks(p, [], [])}) for p in trailheads)"
       ],
       "metadata": {
-        "id": "lBaCaS6DZdpi",
-        "outputId": "124104f9-b45b-48e8-dbf0-5f653bea29d5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "lBaCaS6DZdpi",
+        "outputId": "ea9aa935-3c0c-456d-b42f-3f882a684b09"
       },
-      "execution_count": 30,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "36"
+              "796"
             ]
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 37
         }
       ]
     },
@@ -1277,11 +1277,11 @@
         "sum(len(find_peaks(p, [], [])) for p in trailheads)"
       ],
       "metadata": {
-        "id": "aVweMTquZsTf",
-        "outputId": "f4a07257-9311-4b49-8337-1f1e477410b0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "aVweMTquZsTf",
+        "outputId": "f4a07257-9311-4b49-8337-1f1e477410b0"
       },
       "execution_count": 33,
       "outputs": [
@@ -1309,35 +1309,111 @@
     {
       "cell_type": "code",
       "source": [
-        "# input11 = [s.strip() for line in open('drive/MyDrive/AoC/2024/input11.txt') for s in line.split()]\n",
-        "input11 = [s.strip() for s in \"125 17\".split()]"
+        "input11 = [s.strip() for s in \"8435 234 928434 14 0 7 92446 8992692\".split()]\n",
+        "# input11 = [s.strip() for s in \"125 17\".split()]"
       ],
       "metadata": {
-        "id": "QJQB5jz7bASf",
-        "outputId": "91cf6270-bb87-4ec9-cb60-4e3afe2f5d66",
+        "id": "QJQB5jz7bASf"
+      },
+      "execution_count": 66,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Day 11, funcs"
+      ],
+      "metadata": {
+        "id": "dfs50bhbciqR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cache = {}\n",
+        "\n",
+        "def blink_single(s):\n",
+        "  if s in cache:\n",
+        "    return cache[s]\n",
+        "  if s == '0':\n",
+        "    res = ['1']\n",
+        "  elif len(s) % 2 == 0:\n",
+        "    h = len(s) // 2\n",
+        "    res = [s[:h], f'{int(s[h:])}']\n",
+        "  else:\n",
+        "    res = [f'{int(s) * 2024}']\n",
+        "  cache[s] = res\n",
+        "  return res"
+      ],
+      "metadata": {
+        "id": "DTlDxndlciR7",
+        "outputId": "f3fc5b94-1165-4f7f-8f44-21fa4747c848",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 106
+        }
+      },
+      "execution_count": 96,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax (<ipython-input-96-0b760d93a500>, line 17)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-96-0b760d93a500>\"\u001b[0;36m, line \u001b[0;32m17\u001b[0m\n\u001b[0;31m    return [for s in line for b in blink(line, level - 1)]\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Day 11, part 1, 25 itertions"
+      ],
+      "metadata": {
+        "id": "i0f5MqgtioxE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(blink(input11, 25))"
+      ],
+      "metadata": {
+        "id": "fPMRBRvfds8G",
+        "outputId": "5a65f4fd-369c-4557-b5d4-6b1d18a5cfb7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 36,
+      "execution_count": 100,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "['125', '17']"
+              "182081"
             ]
           },
           "metadata": {},
-          "execution_count": 36
+          "execution_count": 100
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Day 11, part 2, 75 iterations"
+      ],
+      "metadata": {
+        "id": "p-mTmP2MmChS"
+      }
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "bdQZ3-WYcCKZ"
+        "id": "XlJTxTNhfBZF"
       },
       "execution_count": null,
       "outputs": []
